the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-todo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-todo
  template:
    metadata:
      labels:
        app: project-todo
    spec:
      containers:
        - name: todo-app
          image: yakovyakov/todo-app:1.0
